; ModuleID = '/home/carl/AnghaBench/php-src/ext/session/extr_session.c_php_session_reset.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/session/extr_session.c_php_session_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@session_status = common dso_local global i32 0, align 4
@php_session_active = common dso_local global i64 0, align 8
@SUCCESS = common dso_local global i64 0, align 8
@FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @php_session_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @php_session_reset() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @session_status, align 4
  %3 = call i64 @PS(i32 %2)
  %4 = load i64, i64* @php_session_active, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %13

6:                                                ; preds = %0
  %7 = call i64 (...) @php_session_initialize()
  %8 = load i64, i64* @SUCCESS, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %6
  %11 = load i64, i64* @SUCCESS, align 8
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %1, align 4
  br label %15

13:                                               ; preds = %6, %0
  %14 = load i32, i32* @FAILURE, align 4
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %13, %10
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i64 @PS(i32) #1

declare dso_local i64 @php_session_initialize(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
